<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clouds_background"
    android:weightSum="2">

    <TextView
        android:id="@+id/tv_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/str_records"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_table"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:text="@string/str_record_table"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:text="@string/str_map"
        android:textColor="@android:color/black"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="70dp"
        android:textSize="20sp" />

    <!--<FrameLayout
        android:id="@+id/placeholder"
        android:layout_width="300dp"
        android:layout_height="310dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp">
     <fragment
        android:id="@+id/fragment"
        android:namemoryGame.RecordTableFragmentment"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="310dp" />
    </FrameLayout>-->

   <FrameLayout
        android:id="@+id/placeholder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_width="300dp"
        android:layout_height="310dp" >
    </FrameLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:text="@string/str_back"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:textSize="20sp" />

    <!--<fragment
        android:id="@+id/fragment"
        android:namemoryGame.RecordTableFragmentment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_width="300dp"
        android:layout_height="310dp"/>-->
        <!--tools:layout="@layout/fragment_record_table"/>-->

</RelativeLayout>

