<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/score_table_fragment"
    android:background="@android:color/background_light"
    android:stretchColumns="1"
    android:weightSum="3"
    tools:context="memoryGame.RecordTableFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.7"
            android:gravity="start"
            android:padding="3dip"
            android:text="@string/str_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1.3"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/str_score"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dip"
            android:textSize="20sp"
            android:text="@string/str_location"
            android:textStyle="bold" />

    </TableRow>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="memoryGame.RecordTableFragment" >

        <ListView
            android:id="@+id/score_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:dividerHeight="2dp"
            android:focusableInTouchMode="true"
            android:isScrollContainer="true">
        </ListView>

    </RelativeLayout>

</TableLayout>